<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <include
            android:id="@+id/tool_bar"
            layout="@layout/toolbar"
    />
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" android:layout_marginEnd="8dp"
            android:visibility="invisible" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/results" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/results"/>
    <Spinner
            android:layout_width="215dp"
            android:layout_height="53dp"
            android:fontFamily="casual"
            android:id="@+id/spinner_HashUnit" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:entries="@array/hash_units" android:scrollbarSize="8dp"
            android:spinnerMode="dialog" android:clipToPadding="false" android:clipChildren="true"
            app:layout_constraintHorizontal_bias="0.505"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText_hashRate"/>
    <Button
            android:text="@string/calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_Calculate" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="12sp"
            android:textStyle="italic" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button_Calculate"
            android:fontFamily="sans-serif-condensed-light"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/results" android:layout_marginTop="8dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <TextView
                android:text="@string/daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_dailyHeader"
                app:layout_constraintTop_toTopOf="@+id/tv_day"
                android:textSize="18sp" android:fontFamily="sans-serif-condensed-light"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/tv_day"
                android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/tv_day"/>
        <TextView
                android:text="@string/weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_weeklyHeader"
                android:textSize="18sp" android:fontFamily="sans-serif-condensed-light"
                app:layout_constraintTop_toTopOf="@+id/tv_week"
                app:layout_constraintBottom_toBottomOf="@+id/tv_week" android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/tv_week"
                android:layout_marginBottom="8dp"/>
        <TextView
                android:text="@string/monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_monthlyHeader"
                android:textSize="18sp" android:fontFamily="sans-serif-condensed-light"
                app:layout_constraintTop_toTopOf="@+id/tv_month"
                app:layout_constraintBottom_toBottomOf="@+id/tv_month" android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/tv_month"
                android:layout_marginBottom="8dp"/>
        <TextView
                android:text="@string/yearly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_yearlyHeader"
                android:textSize="18sp" android:fontFamily="sans-serif-condensed-light"
                app:layout_constraintTop_toTopOf="@+id/tv_year"
                app:layout_constraintBottom_toBottomOf="@+id/tv_year" android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/tv_year"
                android:layout_marginBottom="8dp"/>
        <TextView
                android:text="@string/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_day" android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
                android:fontFamily="sans-serif-condensed-light"
                app:layout_constraintEnd_toStartOf="@+id/currencySignDay" android:textStyle="bold"/>
        <TextView
                android:text="@string/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_week" android:layout_marginEnd="8dp"
                android:textSize="24sp" android:fontFamily="sans-serif-condensed-light" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_day"
                app:layout_constraintEnd_toStartOf="@+id/currencySignWeek" android:textStyle="bold"/>
        <TextView
                android:text="@string/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_month" android:layout_marginEnd="8dp"
                android:textSize="24sp" android:fontFamily="sans-serif-condensed-light" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_week"
                app:layout_constraintEnd_toStartOf="@+id/currencySignMonth" android:textStyle="bold"/>
        <TextView
                android:text="@string/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_year" android:layout_marginEnd="8dp"
                android:textSize="24sp" android:fontFamily="sans-serif-condensed-light" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_month" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="24dp" app:layout_constraintEnd_toStartOf="@+id/currencySignYear"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/dollar_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currencySignDay" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
                android:fontFamily="sans-serif-condensed-light"/>
        <TextView
                android:text="@string/dollar_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currencySignWeek" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                android:textSize="24sp" app:layout_constraintTop_toBottomOf="@+id/currencySignDay"
                android:fontFamily="sans-serif-condensed-light"/>
        <TextView
                android:text="@string/dollar_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currencySignMonth" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                android:textSize="24sp" app:layout_constraintTop_toBottomOf="@+id/currencySignWeek"
                android:fontFamily="sans-serif-condensed-light"/>
        <TextView
                android:text="@string/dollar_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currencySignYear" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                android:textSize="24sp" app:layout_constraintTop_toBottomOf="@+id/currencySignMonth"
                android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
                android:fontFamily="sans-serif-condensed-light"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText_hashRate"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="24sp" android:fontFamily="monospace"
            android:textStyle="bold" app:layout_constraintHorizontal_bias="0.541" android:imeOptions="actionNext"
            tools:ignore="Autofill,LabelFor"/>
    <TextView
            android:text="@string/please_enter_your_btc_hash_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/results"
            app:layout_constraintStart_toStartOf="@+id/editText_hashRate"
            android:fontFamily="sans-serif-condensed-medium" android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/editText_hashRate"/>
    <TextView
            android:text="@string/main_definition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView19" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_HashUnit" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:autoLink="web" android:fontFamily="sans-serif-condensed-medium"
            android:textSize="12sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>